visibility-icon fixed

--- a/src/app/login-signup/signup/signup.component.scss
+++ b/src/app/login-signup/signup/signup.component.scss
@@ -78,7 +78,7 @@
 }    
 
 form {
-    padding: 0 33px;
+    padding: 0;
 }
 
 .form-group-wrapper {
